--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 
 <main>
   <div class="container pt-5">
-    <div class="row">
+    <div class="row justify-content-between">
       <div class="col-md-8 col-sm-12">
         <section>
           <h4 class="font-bold">تعريف الخدمة</h4>
@@ -82,8 +82,85 @@
             </div>
           </div>
         </section>
+
+        <section class="mt-5">
+          <h4 class="font-bold mb-4">طرق الدفع</h4>
+          <div class="row">
+            <div class="col-sm-12 col-md-12">
+              <div class="card-blue-gray d-flex justify-content-between">
+                <div class="d-flex align-items-center">
+                  <img
+                    class="icons d-block ml-3"
+                    src="../images/svg/card.svg"
+                  />
+                  <div class="lh-lg card-title">رسوم طلب ترخيص جديد</div>
+                </div>
+                <div>
+                  <img
+                    class="collapse-icon d-block ml-3"
+                    src="../images/svg/arrow-circle-down.svg"
+                  />
+                </div>
+              </div>
+
+              <div class="card-body lh-lg py-3">
+                <ul>
+                  <li>سجل الدخول على حسابك البنكي</li>
+                  <li>سدد فواتيرك بإستخدام الرقم المفوتر لوزارة الطاقة 267</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="mt-5">
+          <h4 class="font-bold mb-4">دليل الخدمة</h4>
+          <div class="row">
+            <div class="col-sm-12 col-md-12">
+              <div class="card-blue-gray d-flex justify-content-between mb-3">
+                <div class="d-flex align-items-center">
+                  <div class="lh-lg card-title">
+                    دليل الخدمة لطلب تخصيص موارد الطاقة
+                  </div>
+                </div>
+                <div>
+                  <img
+                    class="collapse-icon d-block ml-3"
+                    src="../images/svg/arrow-circle-down.svg"
+                  />
+                </div>
+              </div>
+
+              <div class="card-blue-gray d-flex justify-content-between mb-3">
+                <div class="d-flex align-items-center">
+                  <div class="lh-lg card-title">
+                    دليل الخدمة لطلب تراخيص شبكات وأنابيب الغاز
+                  </div>
+                </div>
+                <div>
+                  <img
+                    class="collapse-icon d-block ml-3"
+                    src="../images/svg/arrow-circle-down.svg"
+                  />
+                </div>
+              </div>
+
+              <div class="card-blue-gray d-flex justify-content-between mb-3">
+                <div class="d-flex align-items-center">
+                  <div class="lh-lg card-title">دليل الخدمة لإصدار تفويض</div>
+                </div>
+                <div>
+                  <img
+                    class="collapse-icon d-block ml-3"
+                    src="../images/svg/arrow-circle-down.svg"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
-      <div class="col-md-4 col-sm-12">
+      <div class="col-md-3 col-sm-12 col-md-gap">
         <div class="card border-0 shadow-sm px-3 py-4">
           <ul class="list">
             <li>
@@ -297,4 +374,4 @@
   </div>
 </main>
 
-<!-- @@include("../layout/footer.html") -->
+@@include("./layout/footer.html")
