--- a/src/html/requestslist.html
+++ b/src/html/requestslist.html
@@ -53,122 +53,122 @@
     <div class="row">
       <div class="col-12 mb-5">
         <div class="card shadow-sm border-secondary-aqua px-3 py-3 mb-2">
-          <div class="d-flex justify-content-between">
-            <div class="d-flex align-items-center">
-              <div class="ms-3">
-                <img src="../images/svg/request-icon-1.svg" />
-              </div>
-              <div class="lh-lg">
-                <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                <p class="m-0 text-black-50 opacity-5">
-                  34435# | خدمة التخصيص و الترخيص
-                </p>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <div class="d-flex align-items-center">
+                <div class="ms-3">
+                  <img src="../images/svg/request-icon-1.svg" />
+                </div>
+                <div class="lh-lg">
+                  <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
+                  <p class="m-0 text-black-50 opacity-5">
+                    34435# | خدمة التخصيص و الترخيص
+                  </p>
+                </div>
               </div>
             </div>
-            <div>
-              <div>
+            <div class="col-12 col-md-6">
+              <div class="text-start">
                 <span class="badge rounded-pill badge-success"
                   >وثيقة تخصيص</span
                 >
-                <p class="m-0 text-black-50 text-opacity-25 lh-1 text-start">
-                  12.10.2022
-                </p>
+                <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
               </div>
             </div>
           </div>
         </div>
 
         <div class="card shadow-sm border-secondary-aqua px-3 py-3 mb-2">
-          <div class="d-flex justify-content-between">
-            <div class="d-flex align-items-center">
-              <div class="ms-3">
-                <img src="../images/svg/request-icon-1.svg" />
-              </div>
-              <div class="lh-lg">
-                <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                <p class="m-0 text-black-50 opacity-5">
-                  34435# | خدمة التخصيص و الترخيص
-                </p>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <div class="d-flex align-items-center">
+                <div class="ms-3">
+                  <img src="../images/svg/request-icon-1.svg" />
+                </div>
+                <div class="lh-lg">
+                  <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
+                  <p class="m-0 text-black-50 opacity-5">
+                    34435# | خدمة التخصيص و الترخيص
+                  </p>
+                </div>
               </div>
             </div>
-            <div>
-              <div>
+            <div class="col-12 col-md-6">
+              <div class="text-start">
                 <span class="badge rounded-pill badge-danger">كتاب الرفض</span>
-                <p class="m-0 text-black-50 text-opacity-25 lh-1 text-start">
-                  12.10.2022
-                </p>
+                <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
               </div>
             </div>
           </div>
         </div>
 
         <div class="card shadow-sm border-secondary-dark px-3 py-3 mb-2">
-          <div class="d-flex justify-content-between">
-            <div class="d-flex align-items-center">
-              <div class="ms-3">
-                <img src="../images/svg/request-icon-2.svg" />
-              </div>
-              <div class="lh-lg">
-                <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                <p class="m-0 text-black-50 opacity-5">
-                  34435# | خدمة التخصيص و الترخيص
-                </p>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <div class="d-flex align-items-center">
+                <div class="ms-3">
+                  <img src="../images/svg/request-icon-2.svg" />
+                </div>
+                <div class="lh-lg">
+                  <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
+                  <p class="m-0 text-black-50 opacity-5">
+                    34435# | خدمة التخصيص و الترخيص
+                  </p>
+                </div>
               </div>
             </div>
-            <div>
-              <div>
+            <div class="col-12 col-md-6">
+              <div class="text-start">
                 <span class="badge rounded-pill badge-draft">مسودة</span>
-                <p class="m-0 text-black-50 text-opacity-25 lh-1 text-start">
-                  12.10.2022
-                </p>
+                <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
               </div>
             </div>
           </div>
         </div>
 
         <div class="card shadow-sm border-secondary-dark px-3 py-3 mb-2">
-          <div class="d-flex justify-content-between">
-            <div class="d-flex align-items-center">
-              <div class="ms-3">
-                <img src="../images/svg/request-icon-2.svg" />
-              </div>
-              <div class="lh-lg">
-                <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                <p class="m-0 text-black-50 opacity-5">
-                  34435# | خدمة التخصيص و الترخيص
-                </p>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <div class="d-flex align-items-center">
+                <div class="ms-3">
+                  <img src="../images/svg/request-icon-2.svg" />
+                </div>
+                <div class="lh-lg">
+                  <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
+                  <p class="m-0 text-black-50 opacity-5">
+                    34435# | خدمة التخصيص و الترخيص
+                  </p>
+                </div>
               </div>
             </div>
-            <div>
-              <div>
+            <div class="col-12 col-md-6">
+              <div class="text-start">
                 <span class="badge rounded-pill badge-light-gray">للتحديث</span>
-                <p class="m-0 text-black-50 text-opacity-25 lh-1 text-start">
-                  12.10.2022
-                </p>
+                <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
               </div>
             </div>
           </div>
         </div>
 
         <div class="card shadow-sm border-0 px-3 py-3 mb-2">
-          <div class="d-flex justify-content-between">
-            <div class="d-flex align-items-center">
-              <div class="ms-3">
-                <img src="../images/svg/request-icon-3.svg" />
-              </div>
-              <div class="lh-lg">
-                <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                <p class="m-0 text-black-50 opacity-5">
-                  34435# | خدمة التخصيص و الترخيص
-                </p>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <div class="d-flex align-items-center">
+                <div class="ms-3">
+                  <img src="../images/svg/request-icon-3.svg" />
+                </div>
+                <div class="lh-lg">
+                  <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
+                  <p class="m-0 text-black-50 opacity-5">
+                    34435# | خدمة التخصيص و الترخيص
+                  </p>
+                </div>
               </div>
             </div>
-            <div>
-              <div>
+            <div class="col-12 col-md-6">
+              <div class="text-start">
                 <span class="badge rounded-pill badge-danger">ملغى</span>
-                <p class="m-0 text-black-50 text-opacity-25 lh-1 text-start">
-                  12.10.2022
-                </p>
+                <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
               </div>
             </div>
           </div>
