--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 <main>
   <div class="container pt-5">
     <div class="row justify-content-between">
-      <div class="col-md-8 col-sm-12">
+      <div class="col-md-8 col-lg-8 col-sm-12">
         <section>
           <h4 class="font-bold">تعريف الخدمة</h4>
           <p>
@@ -17,28 +17,28 @@
         <section class="mt-5">
           <h4 class="font-bold mb-4">المستفيديين</h4>
           <div class="row">
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12 col-lg-4">
               <div
                 class="card border-0 text-center color-primary rounded-sm mb-3"
               >
                 منشات
               </div>
             </div>
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12 col-lg-4">
               <div
                 class="card border-0 text-center color-primary rounded-sm mb-3"
               >
                 مستثمرين أجانب
               </div>
             </div>
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12 col-lg-4">
               <div
                 class="card border-0 text-center color-primary rounded-sm mb-3"
               >
                 جهات حكومية
               </div>
             </div>
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12 col-lg-4">
               <div
                 class="card border-0 text-center color-primary rounded-sm mb-3"
               >
@@ -51,7 +51,7 @@
         <section class="mt-5">
           <h4 class="font-bold mb-4">الرسوم</h4>
           <div class="row">
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12 col-lg-4">
               <div
                 class="card border-0 text-center bg-blue-gray text-blue-gray rounded-sm mb-3 py-4 px-5 d-flex align-items-center fw-bold"
               >
@@ -61,7 +61,7 @@
               </div>
             </div>
 
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12 col-lg-4">
               <div
                 class="card border-0 text-center bg-blue-gray text-blue-gray rounded-sm mb-3 py-4 px-5 d-flex align-items-center fw-bold"
               >
@@ -71,7 +71,7 @@
               </div>
             </div>
 
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12 col-lg-4">
               <div
                 class="card border-0 text-center bg-blue-gray text-blue-gray rounded-sm mb-3 py-4 px-5 d-flex align-items-center fw-bold"
               >
@@ -160,7 +160,7 @@
           </div>
         </section>
       </div>
-      <div class="col-md-3 col-sm-12 col-md-gap">
+      <div class="col-md-4 col-lg-3 col-sm-12 col-lg-gap">
         <div class="card border-0 shadow-sm px-3 py-4">
           <ul class="list">
             <li>
