--- a/src/html/requestupdate-open.html
+++ b/src/html/requestupdate-open.html
@@ -49,7 +49,7 @@
             <h5 class="m-0">بيانات المشروع</h5>
           </div>
           <div>
-            <span class="text-danger">لم يتم اكمال البيانات</span>
+            <span class="text-danger d-sm-none">لم يتم اكمال البيانات</span>
             <button class="btn btn-secondary btn-collapse py-2 me-2">
               <img src="../images/svg/arrow-down.svg" class="icons-xs" />
             </button>
@@ -178,7 +178,7 @@
             <h5 class="m-0">بيانات شركاء المشروع</h5>
           </div>
           <div>
-            <span class="text-danger">لم يتم اكمال البيانات</span>
+            <span class="text-danger d-sm-none">لم يتم اكمال البيانات</span>
             <button class="btn btn-secondary btn-collapse py-2 me-2">
               <img src="../images/svg/arrow-down.svg" class="icons-xs" />
             </button>
@@ -513,6 +513,317 @@
               <div class="form-group mb-4">
                 <label for="">
                   نوع المشروع
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <div
+          class="card border-right-success shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center rounded-bottom-0 border-bottom"
+        >
+          <div>
+            <h5 class="m-0">البيانات الفنية للمشروع</h5>
+          </div>
+          <div>
+            <button class="btn btn-secondary btn-collapse py-2">
+              <img src="../images/svg/arrow-down.svg" class="icons-xs" />
+            </button>
+          </div>
+        </div>
+        <div class="card border-0 shadow-sm mb-3 rounded-top-0 p-4">
+          <h6 class="mb-5">البيانات الفنية للمشروع</h6>
+          <form class="row g-3" novalidate>
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  نوع مصدر الطاقة الأساسي المطلوب
+                  <span class="text-danger">*</span></label
+                >
+                <select id="name" class="form-select" required>
+                  <option>---</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  الكمية المطلوبة<span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  الوحدة
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر"
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  نوع مصدر الطاقة الاحتياطي المطلوب
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  الكمية المطلوبة
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  الوحدة
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  سعة خزانات الوقود الأساسي
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  الوحدة
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  سعة خزانات الوقود الاحتياطي
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  الوحدة
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  المنتجات
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  القدرة الإنتاجية للكهرباء
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  معامل السعة للوحدات
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  معدل إنتاج الكهرباء
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  معدل وتفاصيل الاستهلاك الداخلي للكهرباء
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  كفاءة استهلاك الوقود
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  عدد الوحدات
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  التقنية المستهدفة
+                  <span class="text-danger">*</span></label
+                >
+                <input
+                  id="name"
+                  class="form-control"
+                  placeholder="يكتب هنا اسم المشروع المختصر "
+                  required
+                  value=""
+                />
+              </div>
+            </div>
+
+            <div class="col-12 col-md-12 lh-lg">
+              <div class="form-group mb-4">
+                <label for="">
+                  المواصفات الفنية للوحدات
                   <span class="text-danger">*</span></label
                 >
                 <input
