--- a/src/html/cms/request-details.html
+++ b/src/html/cms/request-details.html
@@ -5,7 +5,7 @@
     @@include("./layout/header.html")
 
     <main role="main" class="main-content">
-      @@include('./layout/pageHead-no-filter.html')
+      @@include('./layout/pageHead-no-filter.html',{ "upper-nav" : "الرئيسية", "main-page-title" : "طلب تخصيص لشركة سالكو البيترولية" })
 
       <div class="container">
         <div class="row">
@@ -25,18 +25,11 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <div class="text-start">
-                    <span class="rounded-pill badge-new bg-transparent"
-                      >طلب جديد
-                    </span>
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <span class="rounded-pill badge-new bg-transparent">طلب جديد </span>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
-                <div class="paragraph mt-4">
-                  عند موافقه العميل المبدئيه على التصميم يتم ازالة هذا النص من
-                  التصميم ويتم وضع النصوص النهائية المطلوبة للتصميم ويقوالاساسي.
-                </div>
+                <div class="paragraph mt-4">عند موافقه العميل المبدئيه على التصميم يتم ازالة هذا النص من التصميم ويتم وضع النصوص النهائية المطلوبة للتصميم ويقوالاساسي.</div>
                 <div class="col-12">
                   <div class="download-card mt-3">
                     <div class="d-flex align-items-center">
@@ -68,12 +61,8 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <div class="text-start">
-                    <span class="rounded-pill badge-new bg-transparent"
-                      >طلب جديد
-                    </span>
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <span class="rounded-pill badge-new bg-transparent">طلب جديد </span>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
@@ -94,12 +83,8 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <div class="text-start">
-                    <span class="rounded-pill badge-new bg-transparent"
-                      >طلب جديد
-                    </span>
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <span class="rounded-pill badge-new bg-transparent">طلب جديد </span>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
@@ -120,12 +105,8 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <div class="text-start">
-                    <span class="rounded-pill badge-new bg-transparent"
-                      >طلب جديد
-                    </span>
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <span class="rounded-pill badge-new bg-transparent">طلب جديد </span>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
@@ -146,12 +127,8 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <div class="text-start">
-                    <span class="rounded-pill badge-new bg-transparent"
-                      >طلب جديد
-                    </span>
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <span class="rounded-pill badge-new bg-transparent">طلب جديد </span>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
@@ -172,21 +149,15 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <div class="text-start">
-                    <span class="rounded-pill badge-new bg-transparent"
-                      >طلب جديد
-                    </span>
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <span class="rounded-pill badge-new bg-transparent">طلب جديد </span>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-md-8 col-12">
-            <div
-              class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3"
-            >
+            <div class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3">
               <div>
                 <h5 class="m-0">تفاصيل الطلب</h5>
               </div>
@@ -197,9 +168,7 @@
               </div>
             </div>
 
-            <div
-              class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3"
-            >
+            <div class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3">
               <div>
                 <h5 class="m-0">البيانات التفصيلية</h5>
               </div>
@@ -210,9 +179,7 @@
               </div>
             </div>
 
-            <div
-              class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3"
-            >
+            <div class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3">
               <div>
                 <h5 class="m-0">المعايير</h5>
               </div>
@@ -223,9 +190,7 @@
               </div>
             </div>
 
-            <div
-              class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3"
-            >
+            <div class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3">
               <div>
                 <h5 class="m-0">الشروط و الاحكام</h5>
               </div>
@@ -236,9 +201,7 @@
               </div>
             </div>
 
-            <div
-              class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3"
-            >
+            <div class="card border-color-light shadow-sm px-3 py-2 d-flex flex-row justify-content-between align-items-center mb-3">
               <div>
                 <h5 class="m-0">المرفقات</h5>
               </div>
@@ -255,13 +218,7 @@
       <div class="page-footer bg-white shadow-sm">
         <div class="container">
           <div class="d-flex py-4 flex-row-reverse">
-            <button
-              class="btn btn-primary me-3 px-3 pb-2"
-              data-bs-toggle="modal"
-              data-bs-target="#exampleModal5"
-            >
-              إسناد الطلب
-            </button>
+            <button class="btn btn-primary me-3 px-3 pb-2" data-bs-toggle="modal" data-bs-target="#exampleModal5">إسناد الطلب</button>
           </div>
         </div>
       </div>
@@ -270,23 +227,12 @@
 </div>
 
 <!-- Modal Login 4 -->
-<div
-  class="modal fade"
-  id="exampleModal4"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <div class="modal-title fs-5" id="exampleModalLabel">الاسناد</div>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <div class="form-group mb-4">
@@ -303,9 +249,7 @@
         </div>
 
         <div class="form-group">
-          <button type="button" class="btn btn-primary w-100">
-            تاكيد الإرسال
-          </button>
+          <button type="button" class="btn btn-primary w-100">تاكيد الإرسال</button>
         </div>
       </div>
     </div>
@@ -313,22 +257,11 @@
 </div>
 
 <!-- Modal Login 4 -->
-<div
-  class="modal fade"
-  id="exampleModal5"
-  tabindex="-1"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <div class="text-center">
